# lintx

./: .env  README.md  pyproject.toml
script/: install.sh  run.sh
src/lintx/: __about__.py  main.py
tests/: __init__.py
